@startuml

title __REQUESTS's Class Diagram__\n

  namespace yhames.pro.project.afis {
    namespace requests {
      class yhames.pro.project.afis.requests.EnrollRequest {
          + handle()
          {static} + read()
          - EnrollRequest()
      }
    }
  }
  

  namespace yhames.pro.project.afis {
    namespace requests {
      class yhames.pro.project.afis.requests.HandshakeRequest {
          + handle()
          {static} + read()
          - HandshakeRequest()
      }
    }
  }
  

  namespace yhames.pro.project.afis {
    namespace requests {
      class yhames.pro.project.afis.requests.MatchRequest {
          + getMethod()
          + getProbe()
          + handle()
          {static} + read()
          + setMethod()
          + setProbe()
          - MatchRequest()
      }
    }
  }
  

  namespace yhames.pro.project.afis {
    namespace requests {
      abstract class yhames.pro.project.afis.requests.Request {
          {abstract} + handle()
          {static} + read()
      }
    }
  }
  

  yhames.pro.project.afis.requests.EnrollRequest -up-|> yhames.pro.project.afis.requests.Request
  yhames.pro.project.afis.requests.EnrollRequest o-- yhames.pro.project.afis.Fingerprint : toEnroll
  yhames.pro.project.afis.requests.HandshakeRequest -up-|> yhames.pro.project.afis.requests.Request
  yhames.pro.project.afis.requests.MatchRequest -up-|> yhames.pro.project.afis.requests.Request
  yhames.pro.project.afis.requests.MatchRequest o-- yhames.pro.project.afis.ComparisonMethod : method
  yhames.pro.project.afis.requests.MatchRequest o-- yhames.pro.project.afis.Fingerprint : probe


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
